# kfclient

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
kfclient/: CMakeLists.txt  kfbuffer.hpp  kfclient.cpp  kfclient.hpp  kfdetails.cpp  kfdetails.hpp  kfplayers.cpp  kfplayers.hpp  kfrules.cpp  kfrules.hpp  libdef.hpp
kfclient-cli/: CMakeLists.txt  definition.hpp  dynacli.hpp  kfclient-cli.cpp
lkfclient/: CMakeLists.txt  lkfclient.cpp
